Bug 305538 - "dolphin --split " does not work
Summary: "dolphin --split " does not work
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: split view (other bugs)
Version First Reported In: 2.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-21 08:45 UTC by Jekyll Wu
Modified: 2012-08-24 22:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2012-08-21 08:45:08 UTC
The "--split' option does not work.

This is not recent regression. It seems that option never works ever since it is introduced in commit 
http://commits.kde.org/kde-baseapps/fff7573ebb910712ad97951bf1762e6a7bb0bdc7 . 



Reproducible: Always

Steps to Reproduce:
1. run "dolphin --split"

Actual Results:  
dolphin starts without split view

Expected Results:  
dolphin starts with split view
Comment 1 Emmanuel Pescosta 2012-08-21 14:59:57 UTC
--split works fine for me

try: dolphin --split ~ ~ 
and it will open your home dir twice in split view mode

dolphin --split /path/to/dir1 /path/to/dir2

In the actual Dolphin version you have to pass two urls, to open Dolphin in split view mode. Do you think that Dolphin should also start with none or only one given url in split view mode? (=> All two views have the same url)
Comment 2 Jekyll Wu 2012-08-21 16:36:51 UTC
Ah, I see. 

I'm not sure whether it is better to enable the split view when one or none URL is given(although that is what I have expected when writing this report), but the current help message is really misleading :

  --split                   Dolphin will get started with a split view.

That makes "--split" look like a switch needing no arguments. Actually, my first impression is "--split" is the one-shot equivalence of the  permanent "split view mode" option in the "startup" page.
Comment 3 Jekyll Wu 2012-08-21 16:46:28 UTC
On the other hand,  if "--split" requires two path arguments to work ,  dolphin should better just refuse to start and give clear error message when not given enough arguments.
Comment 4 Emmanuel Pescosta 2012-08-21 19:10:33 UTC
Ok, I think we should wait for Frank ;) (he will be back soon)

In my opinion, the split view argument should work like the split view mode setting:
+ no url given - use default url for all two views
+ one url given - open default url in the left view and the given url in the right view
+ two urls given - open the first url in the left view and the second url in the right view

And thank you for this bug report!
Comment 5 Frank Reininghaus 2012-08-24 13:32:23 UTC
Thanks Jekyll and Emmanuel for investigating this, I was not aware of this issue!

(In reply to comment #4)
> + no url given - use default url for all two views
> + one url given - open default url in the left view and the given url in the
> right view
> + two urls given - open the first url in the left view and the second url in
> the right view

sounds quite reasonable to me! Or maybe in the in the "one url" case, open this url in both views?
Comment 6 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:18:34 UTC
Resetting assignee to default as per bug #305719
Comment 7 Emmanuel Pescosta 2012-08-24 20:04:13 UTC
review-request: https://git.reviewboard.kde.org/r/106171/

(In reply to comment #5)
> sounds quite reasonable to me! Or maybe in the in the "one url" case, open
> this url in both views?

Yes, open the given url in all two views is better ;)
Comment 8 Emmanuel Pescosta 2012-08-24 21:59:04 UTC
Git commit d430a1c3b3c7485149f5486e38f4188074d09c0d by Emmanuel Pescosta.
Committed on 24/08/2012 at 21:47.
Pushed by emmanuelp into branch 'KDE/4.9'.

Fix wrong behaviour, when Dolphin is started with --split argument.

Actual Results:
dolphin starts without split view

Expected Results:
dolphin starts with split view

New behaviour:
* no url given - use default url for all two views
* one url given - use given url for all two views
* two urls given - open the first url in the left view and the second url in the right view
REVIEW: 106171
FIXED-IN: 4.9.1

M  +24   -16   dolphin/src/dolphinapplication.cpp

http://commits.kde.org/kde-baseapps/d430a1c3b3c7485149f5486e38f4188074d09c0d
Comment 9 Emmanuel Pescosta 2012-08-24 22:00:58 UTC
Git commit 3dd3ff19217229b608510763832f0c7ffdedb688 by Emmanuel Pescosta.
Committed on 24/08/2012 at 21:47.
Pushed by emmanuelp into branch 'master'.

Fix wrong behaviour, when Dolphin is started with --split argument.

Actual Results:
dolphin starts without split view

Expected Results:
dolphin starts with split view

New behaviour:
* no url given - use default url for all two views
* one url given - use given url for all two views
* two urls given - open the first url in the left view and the second url in the right view
REVIEW: 106171

(cherry picked from commit d430a1c3b3c7485149f5486e38f4188074d09c0d)

M  +24   -16   dolphin/src/dolphinapplication.cpp

http://commits.kde.org/kde-baseapps/3dd3ff19217229b608510763832f0c7ffdedb688