Fix wrong behaviour, when Dolphin is started with --split argument.

Actual Results:
dolphin starts without split view

Expected Results:
dolphin starts with split view

New behaviour:
* no url given - use default url for all two views
* one url given - use given url for all two views
* two urls given - open the first url in the left view and the second url in the right view

BUG: 305538
REVIEW: 106171
FIXED-IN: 4.9.1